// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup renders with large props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  background-color: #e07800;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 64px;
  height: 64px;
  font-size: 24px;
  line-height: 32px;
  border-radius: 50%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="margin-left: 0px; border: 2px solid #fff; border-radius: 50%; z-index: 5;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          A
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -20px; border: 2px solid #fff; border-radius: 50%; z-index: 4;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          B
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -20px; border: 2px solid #fff; border-radius: 50%; z-index: 3;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          C
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -20px; border: 2px solid #fff; border-radius: 50%; z-index: 2;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          D
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -20px; border: 2px solid #fff; border-radius: 50%; z-index: 1;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          E
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AvatarGroup renders with medium props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  background-color: #e07800;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 40px;
  height: 40px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="margin-left: 0px; border: 2px solid #fff; border-radius: 50%; z-index: 5;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          A
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -12px; border: 2px solid #fff; border-radius: 50%; z-index: 4;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          B
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -12px; border: 2px solid #fff; border-radius: 50%; z-index: 3;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          C
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -12px; border: 2px solid #fff; border-radius: 50%; z-index: 2;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          D
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -12px; border: 2px solid #fff; border-radius: 50%; z-index: 1;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          E
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AvatarGroup renders with zIndexAscend 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="margin-left: 0px; border: 2px solid #fff; border-radius: 50%; z-index: 0;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          A
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -8px; border: 2px solid #fff; border-radius: 50%; z-index: 1;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          B
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -8px; border: 2px solid #fff; border-radius: 50%; z-index: 2;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          C
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -8px; border: 2px solid #fff; border-radius: 50%; z-index: 3;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          D
        </span>
      </div>
    </div>
    <div
      class="emotion-1"
      style="margin-left: -8px; border: 2px solid #fff; border-radius: 50%; z-index: 4;"
    >
      <div
        class="emotion-2"
      >
        <span
          style="transform: scale(1);"
        >
          E
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
